--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li>|</li>
+            <li><a href="https://store.townyhavens.cf">Store</a></li>
+            <li>|</li>
             <li><a href="tokyo.html">Tokyo</a></li>
             <li>|</li>
             <li><a href="nagoya.html">Nagoya</a></li>
