--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li>|</li>
-            <li><a href="https://store.townyhavens.cf">Store</a></li>
+            <li><a href="https://store.japan-townyhavens.cf">Store</a></li>
             <li>|</li>
             <li><a href="tokyo.html">Tokyo</a></li>
             <li>|</li>
