--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="wxjflCA1uRlvNR1MxYoSLI3HJuAEYXynwrXawar8TWM" />
     <title>Home | Japan | TownyHavens</title>
     <link rel="stylesheet" href="syle.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
