--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Home | Japan | TownyHavens</title>
     <link rel="stylesheet" href="syle.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <script data-ad-client="ca-pub-8537594141067520" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
     <Header>
