--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="google-site-verification" content="wxjflCA1uRlvNR1MxYoSLI3HJuAEYXynwrXawar8TWM" />
+    <script data-ad-client="ca-pub-8537594141067520" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <title>Home | Japan | TownyHavens</title>
     <link rel="stylesheet" href="syle.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
