--- a/update.html
+++ b/update.html
@@ -13,7 +13,7 @@
             <li>|</li>
             <li><a href="https://store.japan-townyhavens.cf">Store</a></li>
             <li>|</li>
-            <li><a href="updates.html"></a></li>
+            <li><a href="updates.html">Updates!</a></li>
             <li>|</li>
             <li><a href="tokyo.html">Tokyo</a></li>
             <li>|</li>
