--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
             <li>|</li>
             <li><a href="https://store.japan-townyhavens.cf">Store</a></li>
             <li>|</li>
+            <li><a href="updates.html">Updates!</a></li>
+            <li>|</li>
             <li><a href="tokyo.html">Tokyo</a></li>
             <li>|</li>
             <li><a href="nagoya.html">Nagoya</a></li>
