--- a/kyoto.html
+++ b/kyoto.html
@@ -12,6 +12,8 @@
             <li>|</li>
             <li><a href="https://store.japan-townyhavens.cf">Store</a></li>
             <li>|</li>
+            <li><a href="updates.html">Updates!</a></li>
+            <li>|</li>
             <li><a href="tokyo.html">Tokyo</a></li>
             <li>|</li>
             <li><a href="nagoya.html">Nagoya</a></li>
